--- a/variables.env
+++ b/variables.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
-DATABASE=mongodb://admin:admin@ds231715.mlab.com:31715/delicious
-PORT=7775
+DATABASE=mongodb://admin:admin@ds111138.mlab.com:11138/ow_stat_tracker
+PORT=7770
