--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "mongoose": "^5.0.1"
+    "express-session": "^1.15.6",
+    "mongoose": "^5.0.1",
+    "slugs": "^0.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.14.11"
