--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon start.js"
+    "start": "nodemon start.js",
+    "sass": "node-sass scss/style.scss css/style.css"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.1",
+    "node-sass": "^4.7.2",
     "pug": "^2.0.0-rc.4",
     "slugs": "^0.1.3"
   },
